kubernetes/apps/observability/uptime-kuma/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: uptime-kuma
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - uptime.${DOMAIN}
  rules:
    - backendRefs:
        - name: uptime-kuma
          namespace: observability
          port: 3001
